Prepared the base class and the navigation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#080917</color>
+    <color name="colorPrimaryDark">#000</color>
+    <color name="colorAccent">#1fbad6</color>
+    <color name="colorTitle">#ffffff</color>
+    <color name="colorEtBackgroundTint">#49a3bb</color>
+    <color name="colorError">#C0392B</color>
+
 </resources>
