--- a/app/src/main/res/layout-v21/fragment_login.xml
+++ b/app/src/main/res/layout-v21/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fcfcfb"
     tools:context=".Fragments.LoginFragment">
 
     <android.support.constraint.ConstraintLayout
@@ -15,12 +16,12 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_marginTop="32dp"
+            android:contentDescription="@string/soleeklab_logo"
             android:src="@drawable/soleeklabl_logo"
             app:layout_constraintBottom_toTopOf="@id/login_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/soleeklab_logo" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
